# corekv

./: .gitignore  Makefile  error.go  go.mod  go.sum  go.work.sum  kv.go  tx.go  txn.go
.github/workflows/: test.yml
array/: Makefile  array.go  array_test.go
array/internal/abi/: Cargo.toml
array/internal/concurrency/: Cargo.toml
array/internal/txn/: Cargo.toml
badger/: badger.go  go.mod  go.sum  iter.go
blockstore/: blockstore.go  errors.go  go.mod  go.sum  ipld.go
chunk/: chunk.go  go.mod  txn.go
indexed_db/: indexed_db.go  iter.go  txn.go
leveldb/: go.mod  go.sum  iter.go  leveldb.go
memory/: go.mod  go.sum  iter.go  memory.go  txn.go
namespace/: go.mod  namespace.go  txn.go
test/: go.mod  go.sum
test/action/: chunk.go  drop_all.go  iterate.go  iterator.go  namespace.go  new.go  new_js.go  new_other.go  txn.go
test/integration/: delete_close_test.go  drop_all_test.go  set_close_test.go  set_drop_all_has_test.go  test.go  txn_callbacks_test.go
test/integration/iterator/: close_next_test.go  close_next_value_test.go  close_seek_test.go  close_test.go  end_namespace_test.go  namespace_test.go  prefix_delete_test.go  prefix_namespace_test.go  prefix_reverse_test.go  prefix_test.go  reverse_end_seek_value_test.go  start_end_namespace_test.go  start_namespace_test.go  start_seek_value_test.go  txn_next_value_test.go  (+1 more)
test/multiplier/: chunk.go  namespace.go  store_type.go  txn.go
test/state/: state.go
timeseries/: Makefile  timeseries.go  timeseries_test.go
timeseries/internal/abi/: Cargo.toml
timeseries/internal/abi/src/: lib.rs
(+3 files in other folders)
